--- a/css/project.css
+++ b/css/project.css
@@ -146,7 +146,7 @@ body.project-detail {
         height: auto;
         max-height: 250px;
         /* menjaga proporsi gambar di layar kecil */
-        object-fit: cover;
+        object-fit: contain;
     }
 
     /* Tombol Kembali */
@@ -211,11 +211,7 @@ body {
 }
 
 .project-detail {
-    overflow: hidden;
-    /* sembunyikan scroll vertikal sementara animasi */
-}
-
-.project-detail-content.visible {
-    overflow: visible;
-    /* setelah animasi selesai, biarkan scroll normal */
+    overflow-y: auto;
+        /* ✅ BUKAN hidden */
+        overflow-x: hidden;
 }
